server/compilers/goLiteJS/src/test/ml1/invalid/array6.go
//missing right bracket in array declaration
package main
var x [3int
